Fixed cursor visibility

--- a/static/css/utilities.css
+++ b/static/css/utilities.css
@@ -9,10 +9,6 @@
     opacity: 0 !important;
 }
 
-.cursor-none {
-    cursor: none !important;
-}
-
 /*
  * Margin-related rules
  */
